@@ -8,3 +8,5 @@ The portable zip versions are used as update packages. You can run them standalo
 **Release notes for this version:**
 Add MissionID to CargoTransfer journal event
 Add Wanted to SupercruiseEntry journal event
+Add Wanted to Location journal event
+Add HappiestSystem to CarrierJump journal event
